# ocaml-stakeholder

./: .gitignore  AGENTS.md  AI_DISCLOSURE.md  Dockerfile  GAPS.md  PARITY.md  README.md  STATUS.md  dune-project  flake.nix  ocaml-stakeholder.opam
.github/workflows/: actionlint.yml  ci-native.yml  ci.yml  dependency-review.yml  docker-smoke.yml
docs/: provenance.md  remotes.md  toolchain.md
docs/traceability/: first-push-families.md
scripts/: validate_scaffold.py
src/: catalog.ml  dune  json.ml  runtime.ml
test/: dune  runtime_test.ml
